# ByteStream

./: .gitignore  CMakeLists.txt
examples/: example.cpp
include/: ByteStream.h  Export.h
src/: ByteStream.cpp
